--- a/HotelManagASP/Views/Shared/_Layout.cshtml
+++ b/HotelManagASP/Views/Shared/_Layout.cshtml
@@ -43,7 +43,7 @@
                             <a class="nav-link" href="@Url.Action("Index", "Hotel")">Liste Des Chambres</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="@Url.Action("Index", "Hotel")">Reservation</a>
+                            <a class="nav-link" href="@Url.Action("Reserver", "Reservation")">Reservation</a>
                         </li>
                     }
                 </ul>
